fix(chipgroup): fix cut off chip text

--- a/src/patternfly/components/ChipGroup/chip-group.scss
+++ b/src/patternfly/components/ChipGroup/chip-group.scss
@@ -49,9 +49,9 @@
 }
 
 .pf-c-chip-group__list-item {
+  display: inline-flex;
   margin-right: var(--pf-c-chip-group__list-item--MarginRight);
   margin-bottom: var(--pf-c-chip-group__list-item--MarginBottom);
-  line-height: 1;
 }
 
 .pf-c-chip-group__label {
